trunk/Archive2/e0/065eeffc0141fc/output
main.cpp:18:45: error: no member named 'set_value_at_thread_exit' in 'std::promise<int>'
    std::thread( [](std::promise<int> p){ p.set_value_at_thread_exit(9); }, 
                                          ~ ^
1 error generated.
